--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfólio</title>
+    <script src="https://cdn.jsdelivr.net/npm/appwrite@16.0.2"></script>
+    <script>
+        const { Client } = Appwrite;
+    </script>
 </head>
 <body>
     <span>Está meio vazio aqui... logo daremos inicio ao portfólio 😊</span>
