--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <script src="https://cdn.jsdelivr.net/npm/appwrite@16.0.2"></script>
     <script>
         const { Client } = Appwrite;
+        const client = new Client();
+        client.setProject('676f7044001d0d9e473e');
     </script>
 </head>
 <body>
