--- a/index.html
+++ b/index.html
@@ -1,17 +1,67 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portfólio</title>
-    <script src="https://cdn.jsdelivr.net/npm/appwrite@16.0.2"></script>
-    <script>
-        const { Client } = Appwrite;
-        const client = new Client();
-        client.setProject('676f7044001d0d9e473e');
-    </script>
+    <title>Portfolio</title>
+    <meta name="description" content="Portfolio de desenvolvedor fullstack especializado em Java, Spring, React e tecnologias web modernas">
+    <link rel="stylesheet" href="/assets/css/style.css">
+    <link rel="stylesheet" href="/assets/css/components/header.css">
+    <link rel="stylesheet" href="/assets/css/pages/home.css">
 </head>
 <body>
-    <span>Está meio vazio aqui... logo daremos inicio ao portfólio 😊</span>
+    <header class="header">
+        <nav class="nav-container">
+            <div class="logo">dimi.dev</div>
+            <ul class="nav-links">
+                <li><a href="/" class="active">Início</a></li>
+                <li><a href="/pages/about.html">Sobre</a></li>
+                <li><a href="/pages/projects.html">Projetos</a></li>
+                <li><a href="/pages/blog">Blog</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <main class="main-content">
+        <section class="hero">
+            <h1 class="title">Olá, eu sou Matheus, também conhecido como dimi</h1>
+            <p class="subtitle">Desenvolvedor Fullstack</p>
+            <div class="tech-stack">
+                <span class="tech">Java</span>
+                <span class="tech">Spring</span>
+                <span class="tech">React</span>
+                <span class="tech">TypeScript</span>
+                <span class="tech">Next.js</span>
+            </div>
+        </section>
+
+        <section class="featured-projects">
+            <h2>Projetos em Destaque</h2>
+            <div class="projects-grid">
+                <!-- Projetos serão adicionados aqui -->
+            </div>
+        </section>
+
+        <section class="latest-posts">
+            <h2>Últimos Artigos</h2>
+            <div class="posts-grid">
+                <!-- Posts serão adicionados aqui -->
+            </div>
+        </section>
+    </main>
+
+    <footer class="footer">
+        <div class="footer-content">
+            <div class="social-links">
+                <a href="https://github.com/dimidotdev" target="_blank" rel="noopener">GitHub</a>
+                <a href="https://instagram.com/dimi.dev" target="_blank" rel="noopener">Instagram</a>
+                <a href="https://linkedin.com/in/matheus-dimi-silva" target="_blank" rel="noopener">LinkedIn</a>
+                <!-- Adicionar outros links sociais conforme necessário -->
+            </div>
+        </div>
+    </footer>
+
+    <script src="/assets/js/main.js"></script>
+    <script src="/assets/js/theme.js"></script>
 </body>
 </html>
