--- a/pages/about.html
+++ b/pages/about.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="/assets/img/favicon.ico" type="image/x-icon">
     <title>Sobre | dimi.dev</title>
     <meta name="description" content="Desenvolvedor Fullstack com experiência em Java, Spring, React e tecnologias web modernas">
     <link rel="stylesheet" href="/assets/css/style.css">
