--- a/pages/projects.html
+++ b/pages/projects.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="/assets/img/favicon.ico" type="image/x-icon">
     <title>Projetos | dimi.dev</title>
     <meta name="description" content="Portfolio de projetos desenvolvidos com diversas tecnologias">
     <link rel="stylesheet" href="/assets/css/style.css">
