--- a/pages/projects.html
+++ b/pages/projects.html
@@ -37,7 +37,41 @@
                 <!-- Exemplo de card de projeto -->
                 <article class="project-card" data-category="fullstack">
                     <div class="project-content">
-                        <h3>Nome do Projeto</h3>
+                        <h3>Exemplo projeto fullstack</h3>
+                        <p class="project-description">
+                            Descrição breve do projeto e suas principais características.
+                        </p>
+                        <div class="project-tech">
+                            <span class="tech-tag">React</span>
+                            <span class="tech-tag">Spring</span>
+                            <span class="tech-tag">PostgreSQL</span>
+                        </div>
+                    </div>
+                    <div class="project-links">
+                        <a href="#" class="project-link" target="_blank" rel="noopener">Demo</a>
+                        <a href="#" class="project-link" target="_blank" rel="noopener">GitHub</a>
+                    </div>
+                </article>
+                <article class="project-card" data-category="backend">
+                    <div class="project-content">
+                        <h3>Exemplo projeto backend</h3>
+                        <p class="project-description">
+                            Descrição breve do projeto e suas principais características.
+                        </p>
+                        <div class="project-tech">
+                            <span class="tech-tag">React</span>
+                            <span class="tech-tag">Spring</span>
+                            <span class="tech-tag">PostgreSQL</span>
+                        </div>
+                    </div>
+                    <div class="project-links">
+                        <a href="#" class="project-link" target="_blank" rel="noopener">Demo</a>
+                        <a href="#" class="project-link" target="_blank" rel="noopener">GitHub</a>
+                    </div>
+                </article>
+                <article class="project-card" data-category="frontend">
+                    <div class="project-content">
+                        <h3>Exemplo projeto frontend</h3>
                         <p class="project-description">
                             Descrição breve do projeto e suas principais características.
                         </p>
