--- a/pages/about.html
+++ b/pages/about.html
@@ -9,6 +9,9 @@
     <link rel="stylesheet" href="/assets/css/style.css">
     <link rel="stylesheet" href="/assets/css/components/header.css">
     <link rel="stylesheet" href="/assets/css/pages/about.css">
+    <meta name="color-scheme" content="light dark">
+    <script src="/assets/js/theme.js"></script>
+    <link rel="stylesheet" href="/assets/css/themes.css">
 </head>
 <body>
     <header class="header">
@@ -21,6 +24,18 @@
                 <li><a href="/pages/blog">Blog</a></li>
             </ul>
         </nav>
+        <div class="theme-switcher">
+            <button class="theme-btn" data-theme="light" title="Tema Claro">
+                ☀️
+            </button>
+            <button class="theme-btn" data-theme="dark" title="Tema Escuro">
+                🌙
+            </button>
+            <button class="theme-btn" data-theme="high-contrast" title="Alto Contraste">
+                ⚡
+            </button>
+        </div>
+    </nav>
     </header>
 
     <main class="main-content">
