--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="color-scheme" content="light dark">
+    <link rel="icon" href="/assets/img/favicon.ico" type="image/x-icon">
     <title>dimi.dev</title>
     <meta name="description" content="Portfolio de desenvolvedor fullstack especializado em Java, Spring, React e tecnologias web modernas">
     
@@ -130,7 +131,6 @@
                 const themeNames = {
                     'light': 'claro ☀️',
                     'dark': 'escuro 🌙',
-                    'high-contrast': 'alto contraste ⚡'
                 };
                 NotificationSystem.show(`Tema ${themeNames[theme]} ativado!`, 'success');
             };
