--- a/pages/projects.html
+++ b/pages/projects.html
@@ -13,8 +13,9 @@
     <link rel="stylesheet" href="/assets/css/components/header.css">
     <link rel="stylesheet" href="/assets/css/pages/home.css">
     <link rel="stylesheet" href="/assets/css/themes.css">
-    <link rel="stylesheet" href="/assets/css/animations.css">
     <link rel="stylesheet" href="/assets/css/components/notifications.css">
+    <link rel="stylesheet" href="/assets/css/pages/projects.css">
+    <link rel="stylesheet" href="/assets/css/animations.css">
 </head>
 <body>
     <header class="header">
