--- a/pages/about.html
+++ b/pages/about.html
@@ -10,6 +10,7 @@
     
     <!-- Estilos -->
     <link rel="stylesheet" href="/assets/css/style.css">
+    <link rel="stylesheet" href="/assets/css/pages/about.css">
     <link rel="stylesheet" href="/assets/css/components/header.css">
     <link rel="stylesheet" href="/assets/css/pages/home.css">
     <link rel="stylesheet" href="/assets/css/themes.css">
