--- a/pages/about.html
+++ b/pages/about.html
@@ -16,11 +16,21 @@
     <link rel="stylesheet" href="/assets/css/themes.css">
     <link rel="stylesheet" href="/assets/css/animations.css">
     <link rel="stylesheet" href="/assets/css/components/notifications.css">
+    <link rel="stylesheet" href="/assets/css/mobile.css">
+    <link rel="stylesheet" href="/assets/css/components/header.css">
 </head>
 <body>
     <header class="header">
         <nav class="nav-container">
-            <div class="logo">dimi.dev</div>
+            <div class="logo">
+                <button class="mobile-menu-btn" aria-label="Menu">
+                    ☰
+                </button>
+                <a href="/" class="logo-link">
+                    <img src="/assets/img/logo.svg" alt="Logo dimi.dev" class="logo-img">
+                    mi.dev
+                </a>
+            </div>
             <ul class="nav-links">
                 <li><a href="/">Início</a></li>
                 <li><a href="/pages/about.html" class="active">Sobre</a></li>
@@ -42,59 +52,126 @@
     </nav>
     </header>
 
-    <main class="main-content">
-        <section class="about-section">
-            <h1>Sobre Mim</h1>
-            <div class="about-content">
-                <div class="profile">
-                    <div class="profile-info">
-                        <h2>Desenvolvedor Fullstack</h2>
+    <main>
+        <!-- Seção Introdução -->
+        <section class="about-intro">
+            <div class="section-container">
+                <div class="intro-content">
+                    <div class="profile-image">
+                        <img src="/assets/img/profile.jpg" alt="Dimi Dev" class="profile-photo">
+                    </div>
+                    <div class="intro-text">
+                        <h1>Olá, meu nome é Matheus Silva</h1>
+                        <h2>sou desenvolvedor fullstack</h2>
                         <p class="bio">
-                            Sou um desenvolvedor fullstack com foco em criar soluções robustas e escaláveis.
-                            Minha jornada inclui experiência tanto em backend quanto frontend, sempre buscando
-                            as melhores práticas e tecnologias mais adequadas para cada projeto.
+                            e apaixonado por criar soluções elegantes e eficientes. 
+                            Com experiência em desenvolvimento fullstack, combino criatividade e 
+                            tecnologia para construir aplicações web modernas e escaláveis.
                         </p>
+                        <div class="social-links">
+                            <a href="https://github.com/dimidotdev" class="social-link" target="_blank">
+                                <img src="/assets/img/github.png" alt="GitHub">
+                                <span>GitHub</span>
+                            </a>
+                            <a href="https://linkedin.com/in/matheus-dimi-silva/" class="social-link" target="_blank">
+                                <img src="/assets/img/linkedin.png" alt="LinkedIn">
+                                <span>LinkedIn</span>
+                            </a>
+                            <a href="https://instagram.com/dimi.dev" class="social-link" target="_blank">
+                                <img src="/assets/img/instagram.png" alt="Twitter">
+                                <span>Instagram</span>
+                            </a>
+                        </div>
                     </div>
                 </div>
+            </div>
+        </section>
 
-                <div class="skills-section">
-                    <h3>Habilidades Técnicas</h3>
-                    <div class="skills-grid">
-                        <div class="skill-category">
-                            <h4>Backend</h4>
-                            <ul class="skill-list">
-                                <li>Java</li>
-                                <li>Spring Framework</li>
-                                <li>Spring Boot</li>
-                                <li>NestJS</li>
+        <!-- Seção Experiência -->
+        <section class="experience">
+            <div class="section-container">
+                <h2 class="section-title">Experiência Profissional</h2>
+                <div class="timeline">
+                    <div class="timeline-item">
+                        <div class="timeline-marker"></div>
+                        <div class="timeline-content">
+                            <div class="timeline-header">
+                                <h3>Desenvolvedor Fullstack Senior</h3>
+                                <span class="timeline-period">2023 - Presente</span>
+                            </div>
+                            <p class="company">Empresa Tech</p>
+                            <ul class="achievement-list">
+                                <li>Liderança técnica em projetos de grande escala</li>
+                                <li>Desenvolvimento de soluções com Spring Boot e React</li>
+                                <li>Implementação de práticas de CI/CD</li>
                             </ul>
-                        </div>
-                        <div class="skill-category">
-                            <h4>Frontend</h4>
-                            <ul class="skill-list">
-                                <li>React</li>
-                                <li>Next.js</li>
-                                <li>TypeScript</li>
-                                <li>Electron</li>
-                            </ul>
-                        </div>
-                        <div class="skill-category">
-                            <h4>Banco de Dados</h4>
-                            <ul class="skill-list">
-                                <li>MySQL</li>
-                                <li>PostgreSQL</li>
-                                <li>MongoDB</li>
-                            </ul>
-                        </div>
-                        <div class="skill-category">
-                            <h4>Design & Ferramentas</h4>
-                            <ul class="skill-list">
-                                <li>UI/UX Design</li>
-                                <li>Git</li>
-                                <li>Docker</li>
-                            </ul>
+                            <div class="tech-used">
+                                <span>Java</span>
+                                <span>Spring</span>
+                                <span>React</span>
+                                <span>AWS</span>
+                            </div>
                         </div>
                     </div>
+                    <!-- Mais experiências aqui -->
+                </div>
+            </div>
+        </section>
+
+        <!-- Seção Habilidades -->
+        <section class="skills">
+            <div class="section-container">
+                <h2 class="section-title">Habilidades Técnicas</h2>
+                <div class="skills-wrapper">
+                    <div class="skill-category">
+                        <h3>Backend</h3>
+                        <div class="skill-items">
+                            <div class="skill-item">
+                                <div class="skill-header">
+                                    <span>Java</span>
+                                    <span>95%</span>
+                                </div>
+                                <div class="skill-bar">
+                                    <div class="skill-progress" style="width: 95%"></div>
+                                </div>
+                            </div>
+                            <!-- Mais skills aqui -->
+                        </div>
+                    </div>
+
+                    <div class="skill-category">
+                        <h3>Frontend</h3>
+                        <div class="skill-items">
+                            <div class="skill-item">
+                                <div class="skill-header">
+                                    <span>React</span>
+                                    <span>90%</span>
+                                </div>
+                                <div class="skill-bar">
+                                    <div class="skill-progress" style="width: 90%"></div>
+                                </div>
+                            </div>
+                            <!-- Mais skills aqui -->
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- Seção Educação e Certificações -->
+        <section class="education">
+            <div class="section-container">
+                <h2 class="section-title">Educação & Certificações</h2>
+                <div class="certificates-grid">
+                    <div class="certificate-card">
+                        <div class="certificate-icon">🎓</div>
+                        <div class="certificate-content">
+                            <h3>Certificação Java</h3>
+                            <p class="certificate-issuer">Oracle</p>
+                            <p class="certificate-date">2024</p>
+                        </div>
+                    </div>
+                    <!-- Mais certificados aqui -->
                 </div>
             </div>
         </section>
@@ -116,6 +193,7 @@
     <script src="/assets/js/idle-detector.js"></script>
     <script src="/assets/js/performance.js"></script>
     <script src="/assets/js/keyboard-shortcuts.js"></script>
+    <script src="/assets/js/mobile-menu.js"></script>
 
     <script>
         // Inicialização de todos os componentes
