--- a/pages/projects.html
+++ b/pages/projects.html
@@ -16,11 +16,20 @@
     <link rel="stylesheet" href="/assets/css/components/notifications.css">
     <link rel="stylesheet" href="/assets/css/pages/projects.css">
     <link rel="stylesheet" href="/assets/css/animations.css">
-</head>
+    <link rel="stylesheet" href="/assets/css/mobile.css">
+    <link rel="stylesheet" href="/assets/css/components/header.css"></head>
 <body>
     <header class="header">
         <nav class="nav-container">
-            <div class="logo">dimi.dev</div>
+            <div class="logo">
+                <button class="mobile-menu-btn" aria-label="Menu">
+                    ☰
+                </button>
+                <a href="/" class="logo-link">
+                    <img src="/assets/img/logo.svg" alt="Logo dimi.dev" class="logo-img">
+                    mi.dev
+                </a>
+            </div>
             <ul class="nav-links">
                 <li><a href="/">Início</a></li>
                 <li><a href="/pages/about.html">Sobre</a></li>
@@ -127,6 +136,7 @@
     <script src="/assets/js/performance.js"></script>
     <script src="/assets/js/keyboard-shortcuts.js"></script>
     <script src="/assets/js/projects.js"></script>
+    <script src="/assets/js/mobile-menu.js"></script>
 
     <script>
         // Inicialização de todos os componentes
