--- a/pages/projects.html
+++ b/pages/projects.html
@@ -124,6 +124,9 @@
             <div class="social-links">
                 <a href="https://github.com/dimidotdev" target="_blank" rel="noopener">GitHub</a>
             </div>
+            <div class="social-links">
+                <a href="https://linkedin.com/in/matheus-dimi-silva/" target="_blank" rel="noopener">LinkedIn</a>
+            </div>
         </div>
     </footer>
 
